<resources>
    <string name="facebook_application_id" translatable="false">1901171559925712</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb1901171559925712</string>
    <string name="app_name">E-commerce C FYP</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="speech_prompt">Say Something&#8230;</string>
    <string name="speech_not_supported">Sorry! Unable to recognize your voice. Try Again!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="dedicatedLocation">
        <item>Please choose a location</item>
        <item>TARUC canteen 2 (Yum Yum Cafeteria)</item>

    </string-array>
    <string name="search">Search Here        </string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="shopcart">Shopping Cart</string>
    <string name="profile">Profile</string>
    <string name="quantity">Quantity:</string>
    <string name="itemsize">Item Size:</string>
    <string name="deliverycost">Delivery Cost:</string>
    <string name="seller">Seller:</string>
    <string name="sellerprofile">Seller Profile</string>
    <string name="category">Category:</string>
    <string name="category2">CATEGORY</string>
    <string name="itemdescription">Item Description</string>
    <string name="stock">Stock:</string>
    <string name="itemvariant">Item Variant</string>
    <string name="checkout">Check Out</string>
    <string name="addtocart">Add To Cart</string>
    <string name="selectall">Select All</string>
    <string name="subtotal">Subtotal:</string>
    <string name="checkoutnow">Check out now</string>
    <string name="manageorder">Manage Order</string>
    <string name="returnandrefund">Return/ refund order </string>
    <string name="packing">Packing:</string>
    <string name="readytodeliver">Ready to deliver:</string>
    <string name="totalitem">Total Item:</string>
    <string name="orderdate">Order Date:</string>
    <string name="ordernumber">Order No.</string>
    <string name="dedicateddropoffpoint">Dedicated drop off point</string>
    <string name="customeaddress">Custom address</string>
    <string name="newaddress">Add New Address</string>
    <string name="submitaddress">Submit delivery address</string>
    <string name="deliveryreminder">Deliver to custom Address will add on extra charges and take longer time. Dedicated drop off point will speed up the delivering process and lower charges may apply if needed.</string>
    <string name="itemname">Item Name</string>
    <string name="qty">Qty</string>
    <string name="qty2">Quantity</string>
    <string name="qty3">Qty:</string>
    <string name="variant">Variant</string>
    <string name="status">Status</string>
    <string name="cancelreminder">Cancelled item will auto refund to customer</string>
    <string name="clickexpand">click me to expand</string>
    <string name="itemdetail">Item Details</string>
    <string name="orderdetail">Order ID:    </string>
    <string name="deliverydetail">Delivery Detail</string>
    <string name="readyToCollect2">Ready to collect:</string>
    <string name="delivered">Delivered:</string>
    <string name="cancelled">Cancelled:</string>
    <string name="cancelled2">Cancelled</string>
    <string name="readyToCollect">Ready To Collect</string>
    <string name="packing2">Packing</string>
    <string name="readytodeliver2">Ready to deliver</string>
    <string name="chkoutorder">Check Out Order</string>
    <string name="variant2">Variant:</string>
    <string name="photofromseller">Photo from seller</string>
    <string name="photodate">photo post date: </string>
    <string name="realphotolabel">Your item is ready</string>
    <string name="about_us_text">Cashierbook social E-commerce develop under TARUC incubator</string>
    <string name="cancel_reason">Cancel reason</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="stockLabel">In Stock:</string>
    <string name="writereason">Write your reason here</string>
    <string name="topsales">Top Sales</string>
    <string name="newArrival">New Arrival</string>
    <string name="allcategory">All Categories</string>
    <string name="location">Location</string>
    <string name="neartaruc">Near TARUC</string>
    <string name="filter">Filter/Sort</string>
    <string name="descriptionrating">Description rating: </string>
    <string name="servicerating">Service rating: </string>
    <string name="datestartbusiness">DateStartBusiness</string>
    <string name="overall">Overall: </string>
    <string name="checkoutorder">Check out order</string>
    <string name="pending">Pending</string>
    <string name="available">Available</string>
    <string name="photo">PHOTO</string>
    <string name="paynow">Pay Now</string>
    <string name="mypurchase">My Purchase</string>
    <string name="myprofile">My Profile</string>
    <string name="setting">Setting</string>
    <string name="account">ACCOUNT</string>
    <string name="changepassword">Change password</string>
    <string name="logout">Log Out</string>
    <string name="aboutthisapp">ABOUT THIS APP</string>
    <string name="feedback">Feedback</string>
    <string name="sendfeedback">Send Feedback</string>
    <string name="version">Version</string>
    <string name="aboutus">About US</string>
    <string name="TandC">Terms of Service</string>
    <string name="privacypolicy">Privacy Policy</string>
    <string name="contactus">Contact Us</string>
    <string name="see_more">See More</string>
    <string name="like">LIKE</string>
    <string name="comment">COMMENT</string>
    <string name="share">SHARE</string>
    <string name="socialpost">Social Post</string>
    <string name="sold">SOLD</string>
    <string name="post">POST</string>
    <string name="reviewcontent">Post Description</string>
    <string name="chooseitem">Choose Item</string>
    <string name="addpic">Add Picture</string>
    <string name="createpost">Create Post</string>
    <string name="rating">Rating :</string>
    <string name="buy_now">Buy Now</string>
    <string name="comment_here">Write a comment…</string>
    <string name="outofstock">Out Of Stock</string>
    <string name="chooseAProductVariant">choose a product variant</string>
    <string name="sessionexp">Session Expired. Please login again</string>
    <string name="charLeft"> character(s) left</string>
    <string name="processing">Processing</string>
    <string name="processingUrOrder">Processing your order</string>
    <string name="pleaseWait">Please wait…</string>
    <string name="addAddress">Add delivery address</string>
    <string name="addressCantBlank">Address cannot be blank</string>
    <string name="stateCantBlank">state cannot be empty</string>
    <string name="cityCantBlank">city cannot be blank</string>
    <string name="postcodeCantBlank">post code cannot be blank</string>
    <string name="receptCantBlank">recipient name cannot be blank</string>
    <string name="contactCantBlank">contact number cannot be blank</string>
    <string name="transFail">Transaction Failed</string>
    <string name="loading">Loading</string>
    <string name="prepareAddressList">Preparing your address list</string>
    <string name="pleaseEnableInternet">Please enable internet connection before proceed</string>
    <string name="unexpectError">Unexpected error: </string>
    <string name="internetErrorTip">This might cause by internet connection error, please try switch to cellular data network / other wifi hotspot and try again. Thank you.</string>
    <string name="chgPassword">Change Password</string>
    <string name="fieldCantBlank">Field cannot be blank!</string>
    <string name="confirmPasswordError">Confirm password not match</string>
    <string name="ChgingPwd">Changing Password</string>
    <string name="smthgWrongPlsWait">Something went wrong. Please try again later</string>
    <string name="successChgPwd">Password Successfully Modified</string>
    <string name="authFail">Authentication Failed</string>
    <string name="itemRemovedFromCart">Item removed from cart</string>
    <string name="dltOrderItem">Delete order item</string>
    <string name="prepareOrderItem">Preparing your ordered item</string>
    <string name="descRequire">Description Required</string>
    <string name="descMin">Please write more than 10 words</string>
    <string name="feedbackSubmit">Feedback Submitting</string>
    <string name="feedbackSubmitSuccess">Feedback sent successfully! Thank You!</string>
    <string name="searchItem">Search items</string>
    <string name="loadItemDetail">Loading item details</string>
    <string name="itemDetailFail">View item fail, please check network</string>
    <string name="itemNA">Item not available, it might be sold out or removed</string>
    <string name="unit"> Unit</string>
    <string name="addingTocart">Adding item to cart</string>
    <string name="addingToCartBackground">Add to cart process running in background</string>
    <string name="itemAddedToCart">item added to cart</string>
    <string name="exitMsg">Are you sure you want to exit Cashierbook?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="prepareorderlist">Preparing your order list</string>
    <string name="prepareOrderDetail">Preparing your order details</string>
    <string name="prepareProfile">Preparing your profile</string>
    <string name="refundorder">Refund order</string>
    <string name="prepareRefundList">Preparing your refund item list</string>
    <string name="preparingCart">Preparing your cart</string>
    <string name="deleteItem">Delete item</string>
    <string name="Error">Error</string>
    <string name="noInternet">No internet connection</string>
    <string name="tryAgn">TRY AGAIN</string>
    <string name="exit">Exit</string>
    <string name="postuploaded">Post Uploaded</string>
    <string name="cancelDialogMsg">Transaction Cancelled, having trouble in payment?</string>
    <string name="cancelHelpYes">Yes, I need help</string>
    <string name="noTQ">No Thanks</string>
    <string name="oldPwd">Old Password</string>
    <string name="newPwd">New Password</string>
    <string name="confirmNewPwd">Confirm New Password</string>
    <string name="confirm">Confirm</string>
    <string name="category3">Category</string>
    <string name="desc">Description</string>
    <string name="writeSmthg">Write something here</string>
    <string name="clear">clear</string>
    <string name="stringleft">300 character(s) left</string>
    <string name="aboutusDesc">At Cashierbook, our aim is to offer our customer speedy and quality online purchasing experience.\n\nWe believe that online shopping is a right. We promise to try our best to deliver the best products at the most reasonable prices,
        and deliver to you with the shortest time.\n\nWe started as a small business in Tunku Abdul Rahman University College (TARUC) MALAYSIA at 2017. Our aim is to continue providing our customers with same day delivering products that keep customer having the best online shopping experience. We care about consumer rights and we will spent all of our effort to ensure all parties will get fair and balanced benefits.\n\nDo you looking e-commerce that able to delivery at the same day? You"'"re in the right place. We strive to be more social and innovative, offering our customers something they want, putting desires at the top of our priority list</string>
    <string name="fee">Fees:</string>
    <string name="total">Total:</string>
    <string name="emptyList">List is empty</string>
    <string name="TandCunderline"><u> Terms of service </u></string>
    <string name="privacyPolicyU"><u> Privacy policy </u></string>
    <string name="agreeTerm">I agree to the following terms below:</string>
</resources>