<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <CheckBox
        android:id="@+id/chkTarcUserOnly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agreeTerm" />
    <TextView
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TandCunderline"
        android:textColor="@color/orange"
        android:textStyle="bold"
        android:layout_marginRight="5dp"
        android:id="@+id/TandClink"/>


    <TextView
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacyPolicyU"
        android:textColor="@color/orange"
        android:textStyle="bold"
        android:id="@+id/privacyPolicyLink"/>

</LinearLayout>