<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePasswordActivity">
    <include
        android:id="@+id/changepasswordtoolbar"
        layout="@layout/default_toolbar"/>

    <EditText
        android:id="@+id/edt_oldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:layout_below="@id/changepasswordtoolbar"
        android:layout_marginRight="30dp"
        android:ems="10"
        android:hint="@string/oldPwd"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edt_newPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/edt_oldPassword"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/newPwd"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edt_confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/edt_newPassword"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/confirmNewPwd"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_confirmChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_confirmPassword"
        android:layout_marginLeft="30dp"

        android:layout_marginRight="30dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/fui_linkColor"
        android:text="@string/confirm"
        android:textColor="@color/White"
        android:textStyle="bold" />
</RelativeLayout>